--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel/framework": "^9.11",
         "laravel/nova": "~4.0",
         "laravel/sanctum": "^2.14.1",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "symfony/polyfill-intl-icu": "^1.25"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
